--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="app-notification-banner" class="app-notification-banner">
     <div class="banner-content">
       📱 <strong>Install Burrito Bytes Menu App</strong> for a better experience!
-      <button id="installBtn" class="install-btn">Download Now</button>
+      <button id="installBtn" class="install-btn">Install Now</button>
     </div>
     <button class="close-banner-btn" aria-label="Dismiss notification">✕</button>
   </div>
